  EntityLoadTestModel.selectRandomItem(EntityComboBoxModel) added
  LocalEntityConnection, now logs setForeignKeyValues() with methodLogger
  ClientInstanceMonitor, ClientInstanceMonitorPanel, crappy tree view of client log added
  DefaultEntity, minor optimization in the way DefaultEntity.DefaultKey objects are instantiated
  EntityTableModel.InsertAction enum added
  EntityTableModel.setAddEntitiesOnInsert() replaced with setInsertAction()
  DateUtil.getFirst/LastDayOfYear() renamed to getFirst/LastDayOfCurrentYear(), getFirst/LastDayOfYear(year) added
  MethodLogger, removed redundant and unused fields, is now final and no longer serializable, ArgumentStringProvider added and implemented
  EntityConnectionServerAdmin.performGC() removed
0.9.9
  Major renaming of methods, ValueMap, Entity now conform to Map method names, get() and put() instead of getValue() and setValue() etc
  ValueMap.getValueChangeObserver() renamed to getValueObserver()
  ValueMapEditModel.getValueChangeObserver() renamed to getValueObserver()
  Entity.set() renamed to put()
  EntityTableModel, renamed getEntitiesByPrimaryKeys() to getEntitiesByKey(), setSelectedByPrimaryKeys() to setSelectedByKey() and getEntityByPrimaryKey() to getEntityByKey(), getEntitiesByPropertyValues() to getEntitiesByPropertyValue()
  Plugin and demo JMinor dependencies now based on the current version in build.properties, ivysettings.xml added, artifactory settings in build.properties
  build.xml, deploy_server and deploy_server_monitor targets improved, no longer create duplicate jminor library jars
  EntityRESTService, minor parameter name change
  LocalEntityConnection.setForeignKeyValues() renamed to setForeignKeys()
  RemoteEntityConnectionProvider.RemoteEntityConnectionHandler.invoke() synchronized
  EntityConnectionServerAdmin, ServerMonitor, added monitoring of GC events and thread count
  Entity.getInt() renamed to getInteger(), getChar() renamed to getCharacter(), for consistency