@@ -4165,3 +4165,4 @@
   RemoteEntityConnectionProvider.RemoteEntityConnectionHandler.invoke() synchronized
   EntityConnectionServerAdmin, ServerMonitor, added monitoring of GC events and thread count
   Entity.getInt() renamed to getInteger(), getChar() renamed to getCharacter(), for consistency
+  EntityUtil, renamed a few methods in accordance with recent changes
